started adding testing and modified cmakelists project structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,56 +1,28 @@
-cmake_minimum_required(VERSION 3.0)
 
-PROJECT( DashboardTracker )
+### ~~~~~~~~~~~~ General  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-# To automatically run MOC when building (Meta Object Compiler)
-set(CMAKE_AUTOMOC ON)
+cmake_minimum_required(VERSION 3.10)
 
-# To automatically run UIC when building (User Interface Compiler)
-set(CMAKE_AUTOUIC ON)
+project( DashboardTracker )
 
-# To automatically run RCC when building (Resource Compiler)
-set(CMAKE_AUTORCC ON)
+set(CMAKE_CXX_STANDARD 14)
 
-find_package(OpenCV 4.0 REQUIRED)
-#set(OpenCV_FOUND 1)
-#set(OpenCV_DIR "C:/Users/gregg/Documents/OpenCV/opencv-4.0.1/opencv-4.0.1/build/install/")
+SET(CMAKE_INCLUDE_CURRENT_DIR ON) # "https://cmake.org/cmake/help/v3.0/variable/CMAKE_INCLUDE_CURRENT_DIR.html" ( QT RUNS PROPERLY WHEN THIS IS SET? )
+
+
+### ~~~~~~~~~~~~ Find Packages ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
 find_package(Qt5 COMPONENTS Core Gui Widgets REQUIRED)
+find_package(OpenCV 4.0 REQUIRED)
+# Add boost
+
+
+### ~~~~~~~~~~~~ General Include/Add ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 include_directories(include/ ${OpenCV_INCLUDE_DIR})
-#set (CMAKE_PREFIX_PATH "C:\\Qt\\5.15.0\\msvc2019_64\\")
 
-#C:\Qt\5.15.0\msvc2019_64
-SET(CMAKE_INCLUDE_CURRENT_DIR ON)
+add_subdirectory(src)
+add_subdirectory(tst)
+add_subdirectory(lib/googletest)
 
-add_library(CalibrationParameters STATIC src/calibParams.cpp include/calibParams.h)
-target_link_libraries(CalibrationParameters ${OpenCV_LIBS})
-
-add_library(ObjectDetection STATIC src/objectDetector.cpp include/objectDetector.h)
-target_link_libraries(ObjectDetection ${OpenCV_LIBS})
-
-add_library(LineDetection STATIC src/lineDetector.cpp include/lineDetector.h)
-target_link_libraries(LineDetection ${OpenCV_LIBS})
-
-add_library(TrafficDetection STATIC src/trafficDetector.cpp include/trafficDetector.h)
-target_link_libraries(TrafficDetection ${OpenCV_LIBS})
-
-add_library(ContourDetection STATIC src/contourDetector.cpp include/contourDetector.h)
-target_link_libraries(ContourDetection ${OpenCV_LIBS})
-
-add_library(CarTracker STATIC src/carTracker.cpp include/carTracker.h)
-target_link_libraries(CarTracker ${OpenCV_LIBS})
-
-add_library(DashboardTracker STATIC src/dashboardTracker.cpp include/dashboardTracker.h)
-target_link_libraries(DashboardTracker ${OpenCV_LIBS} CalibrationParameters ObjectDetection LineDetection TrafficDetection ContourDetection CarTracker)
-
-
-set(project_ui include/mainwindow.ui)
-qt5_wrap_ui(project_headers_wrapped ${project_ui})
-set(project_headers include/mainwindow.h)
-qt5_wrap_cpp(project_sources_moc ${project_headers})
-set(project_sources src/mainwindow.cpp src/main.cpp src/DashboardTrackerTest.cpp) 
-add_executable(DashboardTrackerTest ${project_headers} ${project_sources} ${project_sources_moc} ${project_headers_wrapped})
-target_link_libraries(DashboardTrackerTest DashboardTracker Qt5::Core Qt5::Gui Qt5::Widgets)
-
- 
-    
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
