Did some further work on testing

--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -10,10 +10,9 @@ add_executable(${TST_BINARY} ${project_sources} ${project_headers})
 
 add_test(NAME ${TST_BINARY} COMMAND ${TST_BINARY})
 
-set( DEPENDENCIES ${OpenCV_LIBS} OPENCV_API_CALLS DashboardTracker CalibrationParameters ObjectDetection LineDetection TrafficDetection ContourDetection CarTracker Qt5::Core Qt5::Gui Qt5::Widgets)
+set( DEPENDENCIES ${OpenCV_LIBS} ${Boost_LIBRARIES} gtest OPENCV_API_CALLS DashboardTracker CalibrationParameters ObjectDetection LineDetection TrafficDetection ContourDetection CarTracker Qt5::Core Qt5::Gui Qt5::Widgets)
 
-
-target_link_libraries(${TST_BINARY} PUBLIC ${DEPENDENCIES} gtest ${OpenCV_LIBS}) # target linked library of source_binary
+target_link_libraries(${TST_BINARY} PUBLIC ${DEPENDENCIES}) # target linked library of source_binary
 
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 
